Completed Q-Learning Training and Playing Code and added it to game functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,17 @@
-# Set the minimum required version of CMake.
-# 3.10 is a good baseline for modern C++.
+# Minimum version of CMake required
 cmake_minimum_required(VERSION 3.10)
 
-# Set the project name. This will be the name of your executable.
-project(MyGameProject CXX)
+# Name of your project
+project(TicTacToeBot CXX)
 
-# Specify the C++ standard to use.
-# Your code uses C++11/17 features, so this is important.
+# Set the C++ standard we want to use
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find all your source files (.cpp) automatically.
-# This is convenient if you add more .cpp files later.
-# It assumes all your .cpp files are in the same directory as this CMakeLists.txt.
-file(GLOB SOURCES "*.cpp")
+# Tell CMake to create an executable named "tictactoe_bot"
+# from the main.cpp source file. CMake will automatically
+# figure out the header dependencies.
+add_executable(tictactoe_bot main.cpp)
 
-# Add the executable target.
-# It will be named "MyGameProject" (from the project() command).
-# It will be built from all the source files found by the file(GLOB) command.
-add_executable(${PROJECT_NAME} ${SOURCES})
-
-# If you prefer to list your source files manually, you can do this instead:
-# add_executable(MyGameProject main.cpp player.cpp board.cpp)
-# Note: You only list the .cpp files, not the .h files.
+# Optional: Add compiler flags for warnings
+target_compile_options(tictactoe_bot PRIVATE -Wall -Wextra)
